<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.conectarse.ConectarseFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="364dp"
        android:layout_height="117dp"
        android:layout_weight="1"
        android:background="@color/grey_300"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869"

        >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:visibility="gone" />


        <Button
            android:id="@+id/signOutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="144dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="129dp"
            android:layout_marginBottom="22dp"
            android:layout_weight="1"
            android:text="@string/sign_out"
            tools:visibility="visible" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="103dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvUsuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/tvMostrarUsuario"
        android:layout_width="221dp"
        android:layout_height="44dp"
        android:text="@string/tvMostrarUsuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayConfirCancel"
        android:layout_width="371dp"
        android:layout_height="173dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvConectarseReservas"
        app:layout_constraintVertical_bias="0.081"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/tvConfirmarBorrado"
            android:layout_width="344dp"
            android:layout_height="40dp"
            android:text="@string/tvConfirmarBorrado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.078" />

        <TextView
            android:id="@+id/tvMostrarReservarBorrado"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/tvMostrarReservarBorrado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirmarBorrado"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/butConfimarBorrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butConfimarBorrado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.753"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMostrarReservarBorrado"
            app:layout_constraintVertical_bias="0.609" />

        <Button
            android:id="@+id/butCancelarBorrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butCancelarBorrado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMostrarReservarBorrado"
            app:layout_constraintVertical_bias="0.609" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvConectarseReservas"
        android:layout_width="408dp"
        android:layout_height="261dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario"
        app:layout_constraintVertical_bias="0.429">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>