<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.Reservas.ReservasFragment">


    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="84dp"
        android:layout_height="21dp"
        android:layout_marginTop="136dp"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textColor="@color/texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibFechaEntrada"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintBottom_toTopOf="@+id/ibFechaSalida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/tvMostrarFechaEntrada"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono" />

    <TextView
        android:id="@+id/tvMostrarFechaEntrada"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginTop="23dp"
        android:textColor="@color/texto"
        app:layout_constraintBottom_toTopOf="@+id/tvMostrarFechaSalida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:digits="1234567890"
        android:textColor="@color/texto"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMostrarFechaSalida"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMostrarFechaEntrada" />

    <TextView
        android:id="@+id/tvGente"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:layout_marginTop="256dp"
        android:text="@string/gente"
        android:textSize="18sp"
        android:textColor="@color/texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:textColor="@color/texto"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNumGent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:textColor="@color/texto"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibFechaSalida"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toEndOf="@+id/tvMostrarFechaSalida"
        app:layout_constraintTop_toBottomOf="@+id/ibFechaEntrada" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:textColor="@color/texto"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butReservar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/reservar"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMostrarFechaSalida"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvFechaSalida"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:layout_marginTop="424dp"
        android:text="@string/fechaSalida"
        android:textColor="@color/texto"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/tvMostrarFechaSalida"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="94dp"
        android:layout_height="23dp"
        android:layout_marginTop="196dp"
        android:textColor="@color/texto"
        android:text="@string/correo"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="99dp"
        android:layout_height="25dp"
        android:textColor="@color/texto"
        android:layout_marginTop="316dp"
        android:text="@string/telef"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFechaEntrada"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:layout_marginTop="364dp"
        android:textColor="@color/texto"
        android:text="@string/fechaEntrada"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/tvMostrarFechaEntrada"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cabeceraReservas"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:textColor="@color/texto"
        android:text="@string/cabeceraReservas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>