<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <TextView
        android:id="@+id/tvFechaSalidaConectarseTitulo"
        android:layout_width="74dp"
        android:layout_height="19dp"
        android:layout_weight="1"
        android:text="@string/tvFechaSalidaConectarseTitulo"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <TextView
        android:id="@+id/tvNumeroPersonasConectarseTitulo"
        android:layout_width="81dp"
        android:layout_height="18dp"
        android:layout_weight="1"
        android:text="@string/tvNumeroPersonasConectarseTitulo"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/tvFechaEntradaConectarseTitulo"
        android:layout_width="82dp"
        android:layout_height="19dp"
        android:layout_weight="1"
        android:text="@string/tvFechaEntradaConectarseTitulo"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />


    <LinearLayout

        android:layout_width="370dp"
        android:layout_height="52dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaEntradaConectarseTitulo"
        app:layout_constraintVertical_bias="0.32999998">

        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvFechaEntradaConectarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvFechaSalidaConectarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvNumeroPersonasConectarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <Button
                android:id="@+id/butDelete"
                android:layout_width="28dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/butDelete" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>